WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243462
Cloning a `textarea` should not set the initial selection at the end of the text content
https://bugs.webkit.org/show_bug.cgi?id=243462
Summary
Cloning a `textarea` should not set the initial selection at the end of the t...
Wenson Hsieh
Reported
2022-08-02 11:07:48 PDT
(Fix most of the failing sub-tests in imported/w3c/web-platform-tests/html/semantics/forms/textfieldselection/select-event.html)
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2022-08-02 11:57:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2957
Radar WebKit Bug Importer
Comment 2
2022-08-02 16:50:05 PDT
<
rdar://problem/98016144
>
EWS
Comment 3
2022-08-03 07:09:41 PDT
Committed
253070@main
(32e61eadf821): <
https://commits.webkit.org/253070@main
> Reviewed commits have been landed. Closing PR #2957 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug