Cloning a `textarea` should not set the initial selection at the end of the text content https://bugs.webkit.org/show_bug.cgi?id=243462

Reviewed by Aditya Keerthi.

One of the subtests in `html/semantics/forms/textfieldselection/select-event.html` verifies that
after cloning a `textarea` element (but without attaching it to the document), the `selectionEnd` of
the `textarea` is at the start. However, after 248526@main, we started using the `SetSelectionToEnd`
flag when copying the value for cloned `textarea` elements.

As far as I can tell, this particular change wasn't necessary to pass any other web platform tests,
and additionally causes `select-event.html` to fail; as such, we should simply revert to using
`DoNotSet` here.

Changes covered by rebaselining the web platform test below (`select-event.html`).

* LayoutTests/imported/w3c/web-platform-tests/html/semantics/forms/textfieldselection/select-event-expected.txt:
* LayoutTests/platform/gtk/imported/w3c/web-platform-tests/html/semantics/forms/textfieldselection/select-event-expected.txt:
* Source/WebCore/html/HTMLTextAreaElement.cpp:
(WebCore::HTMLTextAreaElement::copyNonAttributePropertiesFromElement):

Canonical link: https://commits.webkit.org/253070@main